# CXXSandbox

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
cmake/: Options.cmake  Packages.cmake
cmake/macros/: Private.cmake  Public.cmake
cmake/tools/: CXXTools.cmake
experiments/: CMakeLists.txt
experiments/lambdaExpressions/: CMakeLists.txt  main.cpp
experiments/staticLibrarySymbolCollision/: CMakeLists.txt  main.cpp  sharedLibA.cpp  sharedLibB.cpp
experiments/structuredBindings/: CMakeLists.txt  main.cpp
experiments/weakSymbols/: CMakeLists.txt
inlineNamespaces/: CMakeLists.txt  api.cpp  api.h  main.cpp
inlineNamespaces/tests/: CMakeLists.txt  testInlineNamespaces.cpp
src/containers/: CMakeLists.txt  benchmarkVector.cpp  testVector.cpp  utils.h  vector.h
src/cpp20/: CMakeLists.txt  designatedInitializers.cpp
src/cxx11/: inlineNamespaces.cpp  lambdaExpressions.cpp  variadicTemplates.cpp
src/cxx17/: CMakeLists.txt  structuredBindings.cpp
src/cxx20/: designatedInitializers.cpp  likelyAndUnlikely.cpp  rangeBasedLoopWithInitializer.cpp
src/inlineNamespaces/: CMakeLists.txt  main.cpp
src/lambdaExpressions/: CMakeLists.txt  main.cpp
src/linux/: CMakeLists.txt  memoryMap.cpp  sharedMemoryConsumer.cpp  sharedMemoryProducer.cpp
src/memoryMap/: CMakeLists.txt
src/sharedMemory/: CMakeLists.txt  consumer.cpp
src/staticLibrarySymbolCollision/: CMakeLists.txt  main.cpp  sharedLibA.cpp  sharedLibB.cpp  staticLibA.cpp  staticLibB.cpp
src/structuredBindings/: CMakeLists.txt  main.cpp
src/tbb/: CMakeLists.txt  concurrentQueue.cpp  (+25 more)
(+30 files in other folders)
